# MyWeb

./: CMakeLists.txt  LICENSE
backend/: webapp.cpp
backend/DTOs/include/: dtos.h
backend/DTOs/src/: dtos.cpp
backend/component/include/: web_component.h
backend/component/src/: web_component.cpp
backend/controller/include/: web_controller.h
backend/controller/src/: web_controller.cpp
